<resources>
    <string name="app_name">goSellSDKSample</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sdkLanguage">SDK Language</string>
    <string name="key_sdkLanguage">key_sdkLanguage</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="german">Deutsch</string>
    <string name="turkish">Türkçe</string>
    <string name="title_sdkMode">Operation Mode</string>
    <string name="key_sdkMode">key_sdkMode</string>
    <string name="summary_sdk_mode">Select SDK mode</string>
    <string name="Sandbox">Sandbox</string>
    <string name="Production">Production</string>
    <string name="title_sdk_appearance_mode">Appearance Mode</string>
    <string name="key_sdk_appearance_mode">key_sdk_appearance_mode</string>
    <string name="summary_sdk_appearance_mode">Select appearance mode</string>
    <string name="FullScreen">Fullscreen</string>
    <string name="WindowMode">Windowed</string>
    <string name="Default">Default</string>
    <string name="title_sdk_transaction_mode">Transaction Mode</string>
    <string name="key_sdk_transaction_mode">key_sdk_transaction_mode</string>
    <string name="summary_sdk_transaction_mode">Select transaction mode</string>
    <string name="Payment">Payment</string>
    <string name="Authorize">Authorize only</string>
    <string name="SaveCards">Save Cards</string>
    <string name="TokenizeCards">Tokenize Cards</string>
    <string name="title_sdk_transaction_currency">Transaction currency</string>
    <string name="key_sdk_transaction_currency">key_sdk_transaction_currency</string>
    <string name="summary_sdk_transaction_currency">Select transaction currency</string>
    <string name="aed">AED (United Arab Emirates Dirham)</string>
    <string name="bhd">BHD (Bahraini Dinar)</string>
    <string name="egp">EGP (Egyptian Pound)</string>
    <string name="eur">EUR (Euro)</string>
    <string name="gbp">GBP (United Kingdom Pound Sterling)</string>
    <string name="kwd">KWD (Kuwaiti Dinar)</string>
    <string name="omr">OMR (Omani Rial)</string>
    <string name="qr">QR (Qatari Rial)</string>
    <string name="sr">SR (Saudi Riyal)</string>
    <string name="usd">USD (US Dollar)</string>
    <string name="category_customer_title">Customers</string>
    <string name="select_customer">Customers</string>
    <string name="customer_name">Customer name</string>
    <string name="customer_email">Customer email</string>
    <string name="customer_phone">Customer phone</string>
    <string name="customer_name_hint"><font size="12">name</font></string>
    <string name="middle_name_hint"><font size="12">middle name</font></string>
    <string name="last_name_hint"><font size="12">last name</font></string>
    <string name="customer_email_hint"><font size="12">email</font></string>
    <string name="customer_phone_hint"><font size="12">phone</font></string>
    <string name="sdn"><font size="12">SDN</font></string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="summary_sdk_language">Choose your preferred language</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="email_invalid_msg">invalid email!</string>
    <string name="name_invalid_msg">name must be 3 characters at least!</string>
    <string name="mobile_invalid_msg">invalid mobile number!</string>
    <string name="settings_title">goSell SDK Settings</string>
    <string name="session_data_source">Session Data Source</string>
    <string name="appearance">Appearance</string>
    <string name="threeDSecureTitle">3D Secure</string>
    <string name="threeDSecureKey">threeDSecureKey</string>
    <string name="SaveCardMultipleKey">SaveCardMultipleKey</string>
    <string name="SaveCardMultipleTitle">Save Card Multiple Times</string>
    <string name="select_shipping">Shipping</string>
    <string name="select_taxes">Taxes</string>
    <string name="status_popup">Status Popup</string>
    <string name="status_popup_key">statusPopupKey</string>
    <string name="appearance_card_input_fields">Appearance: Card Input Fields</string>
    <string name="font_face_default_value">fonts/NicksFont.ttf</string>
    <string name="appearance_header_preference_font_key">appearance_header_preference_font_key</string>
    <string name="appearance_header_preference_color_key">appearance_header_preference_color_key</string>
    <string name="appearance_header_preference_text_size_key">appearance_header_preference_text_size_key</string>
    <string name="appearance_background_preference_color_key">appearance_background_preference_color_key</string>
    <string name="font_preview_string">PreviewString</string>
    <string name="font_face_font_directory">fonts</string>
    <string name="card_input_font_face">Font</string>
    <string name="default_text_color">Black-#000000</string>
    <string name="appearance_background">Appearance Background</string>
    <string name="appearance_header">Appearance Header</string>
    <string name="appearance_header_preference_font_title">Font</string>
    <string name="appearance_header_preference_color_title">Text Color</string>
    <string name="appearance_background_preference_color_title">Color</string>
    <string name="appearance_header_preference_background_color_title">Background Color</string>
    <string name="appearance_header_preference_background_color_key">appearance_header_preference_background_color_key</string>
    <string name="appearance_header_preference_cancel_button_font_title">Cancel Button Font</string>
    <string name="appearance_header_preference_cancel_button_font_key">appearance_header_preference_cancel_button_font_key</string>
    <string name="appearance_card_input_fields_font_key">appearance_card_input_fields_font_key</string>
    <string name="appearance_card_input_fields_font_title">Font</string>
    <string name="appearance_card_input_fields_text_color_key">appearance_card_input_fields_text_color_key</string>
    <string name="appearance_card_input_fields_text_color_title">Text Color</string>
    <string name="appearance_card_input_fields_invalid_text_color_key">appearance_card_input_fields_invalid_text_color_key</string>
    <string name="appearance_card_input_fields_invalid_text_color_title">Invalid text color</string>
    <string name="appearance_card_input_fields_placeholder_text_color_key">appearance_card_input_fields_placeholder_text_color_key</string>
    <string name="appearance_card_input_fields_placeholder_text_color_title">Placeholder Text Color</string>
    <string name="appearance_card_input_fields_description_font_key">appearance_card_input_fields_description_font_key</string>
    <string name="appearance_card_input_fields_description_font_title">Description Font</string>
    <string name="appearance_card_input_fields_description_color_key">appearance_card_input_fields_description_color_key</string>
    <string name="appearance_card_input_fields_description_color_title">Description Color</string>
    <string name="appearance_card_input_fields_switch_off_thumb_tint_color_key">appearance_card_input_fields_switch_off_thumb_tint_color_key</string>
    <string name="appearance_card_input_fields_switch_off_thumb_tint_color_title">Save Card Switch Off Thumb Tint </string>
    <string name="appearance_card_input_fields_switch_on_thumb_tint_color_key">appearance_card_input_fields_switch_on_thumb_tint_color_key</string>
    <string name="appearance_card_input_fields_switch_on_thumb_tint_color_title">Save Card Switch On Thumb Tint </string>
    <string name="appearance_card_input_fields_switch_off_track_tint_color_key">appearance_card_input_fields_switch_off_track_tint_color_key</string>
    <string name="appearance_card_input_fields_switch_off_track_tint_color_title">Save Card Switch Off Track Tint </string>
    <string name="appearance_card_input_fields_switch_on_track_tint_color_key">appearance_card_input_fields_switch_on_track_tint_color_key</string>
    <string name="appearance_card_input_fields_switch_on_track_tint_color_title">Save Card Switch On Track Tint </string>
    <string name="appearance_card_input_fields_scan_icon_frame_tint_color_key">appearance_card_input_fields_scan_icon_frame_tint_color_key</string>
    <string name="appearance_card_input_fields_scan_icon_frame_tint_color_title">Scan Icon Frame Tint </string>
    <string name="appearance_card_input_fields_scan_icon_tint_color_key">appearance_card_input_fields_scan_icon_tint_color_key</string>
    <string name="appearance_card_input_fields_scan_icon_tint_color_title">scan Icon Tint</string>
    <string name="appearance_tap_button">Appearance Tap Button</string>
    <string name="appearance_tap_button_disabled_background_color_key">appearance_tap_button_disabled_background_color_key</string>
    <string name="appearance_tap_button_disabled_background_color_title">Disabled Background Color</string>
    <string name="appearance_tap_button_enabled_background_color_key">appearance_tap_button_enabled_background_color_key</string>
    <string name="appearance_tap_button_enabled_background_color_title">Enabled Background Color</string>
    <string name="appearance_tap_button_font_key">appearance_tap_button_font_key</string>
    <string name="appearance_tap_button_font_title">Font</string>
    <string name="appearance_tap_button_disabled_titled_color_key">appearance_tap_button_disabled_titled_color_key</string>
    <string name="appearance_tap_button_disabled_titled_color_title">Disabled Title Color</string>
    <string name="appearance_tap_button_enabled_titled_color_key">appearance_tap_button_enabled_titled_color_key</string>
    <string name="appearance_tap_button_enabled_titled_color_title">Enabled Title Color</string>
</resources>